# WhichClass

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
app/: __init__.py  index.css  index.js
app/templates/: about.html  base.html  class.html  index.html  query.html  result.html
public/: index.css  index.js  index.js.map
scripts/: README.md  fetch_from_elective.py  renew_mongo.py
which_class/: model.py  pull_words.py  query.py
